--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-front",
+  "name": "locationShare",
   "private": true,
   "version": "0.0.0",
   "description": "a Sails application",
@@ -41,7 +41,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/anonymous node/sails user/project-front.git"
+    "url": "git://github.com/anonymous node/sails user/locationShare.git"
   },
   "author": "anonymous node/sails user",
   "license": "",
